--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,37 @@
-:root {
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  background-color: #111;
+  color: #bbb;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+.container {
+  /* background-color: rebeccapurple; */
+  max-width: 1366;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 0 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+/* .contact {
+  background-color: red;
+} */
+
+
+
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +137,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
