--- a/src/app/blog/page.module.css
+++ b/src/app/blog/page.module.css
@@ -1,3 +1,20 @@
 .container {
-    background-color: yellow;
+    /* background-color: yellow; */
+    display: flex;
+    align-items: center;
+    gap: 50px;
+    margin-bottom: 50px;
+  }
+
+  .image{
+    object-fit: cover;
+  }
+
+  .title{
+    margin-bottom: 10px;
+  }
+
+  .desc{
+    font-size: 18px;
+    color: #999;
   }
