--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -21,9 +21,18 @@
 .img {
   width: 100%;
   height: 500px;
-  object-fit: cover;
-  /* object-fit: contain; */
-  /* animation: move 3s infinite ease alternate; */
+  /* object-fit: cover; */
+  object-fit: contain;
+  animation: move 3s infinite ease alternate;
+}
+
+@keyframes move{
+  from {
+    transform: translateY(-15px);
+  }
+  to {
+    transform: translateY(10px);
+  }
 }
 
 .desc {
