--- a/src/app/blog/[id]/page.module.css
+++ b/src/app/blog/[id]/page.module.css
@@ -1,19 +1,26 @@
+/* .container{
+
+} */
 .top{
     display: flex;
 }
+
 .info {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
+
 .title {
     font-size: 40px;
 }
+
 .desc {
     font-size: 18px;
     font-weight: 300;
 }
+
 .author {
     display: flex;
     align-items: center;
